--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,44 +1,24 @@
-name: Build on Push
-
-on:
-  push:
-    branches:
-      - main  # Add any other branches you want
+on: push
 
 jobs:
-  build:
-    name: Build ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
-        include:
-          - os: windows-latest
-            output_name: app.exe
-          - os: macos-latest
-            output_name: app_mac
-          - os: ubuntu-latest
-            output_name: app_linux
-
+  compile-windows:
+    name: Compile Windows binary
+    runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller
-        pip install -r requirements.txt
-    
-    - name: Build with PyInstaller
-      run: pyinstaller --onefile your_script.py -n ${{ matrix.output_name }}
-    
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ matrix.os }}-build
-        path: dist/${{ matrix.output_name }}
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+
+      - name: Install dependencies
+        run: |
+          pip install pyinstaller
+          pip install -r requirements.txt
+      - name: Build executable
+        run: pyinstaller -w --onefile tree2.py 
+  # release-bin:
+  #   name: Release binaries
+  #   runs-on: windows-latest
+  #   steps:
+  #     - name: Create Release
+  #     - 
