--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -15,7 +15,7 @@ jobs:
           pip install pyinstaller
           pip install rich
       - name: Build executable
-        run: pyinstaller -w --onefile tree2.py 
+        run: pyinstaller -w --onefile ../../tree2.py 
   # release-bin:
   #   name: Release binaries
   #   runs-on: windows-latest
